--- a/index.Rmd
+++ b/index.Rmd
@@ -11,4 +11,4 @@ output:
 
 ## Project thoughts
 
-How does a team's offensive vs. defensive ratings in the regular season influence their performance in the NBA playoffs? Drawing from the idea that teams with good regular season records are more prepared for the challenges of the playoffs, I hypothesize that teams with better regular season offensive and defensive ratings will have more success in the playoffs (more success being defined as how far they advance in the playoffs). Behavioral and institutional explanations propose that teams excelling in the regular season have systems and strategies in place that translate to the more intense setting of the playoffs. Harnessing data from Basketball-Reference.com, spanning from the inception of the NBA playoffs in 1947 to the most recent full season, my analysis targets NBA teams with performance metrics who make the playoffs during a specific year (I won't be looking at data from let's say last year's Detroit Pistons since they did not make the playoffs). The explanatory variables are a team's "Offensive Rating" and "Defensive Rating" from the regular season, metrics representing points scored and conceded per 100 possessions, respectively. The outcome variable is the team's playoff performance which is measured in how far in the playoffs the team got (first round, second round, conference finals, and NBA finals). If teams with elevated regular season ratings consistently get further in the playoffs, this would prove my hypothesis. In contrast, an absence of a pattern or a negative relationship would reject the hypothesis. One problem I might run into is modeling this data since there are so few rounds and so many teams that I am looking at. Something that I could do is use an outcome variable of "net rating" in the playoffs which is simply the offensive rating - defensive rating. Something I want to try and consider is to also maybe see how offensive vs. defensive ratings matter in respect to each other. For example, is it better to have an okay offense and exceptional defense or vice versa. These are a couple directions I also thought about that I might consider doing either within the project or altering it slightly so it accounts/looks into this specifically. 
+How does a team's offensive vs. defensive ratings in the regular season influence their performance in the NBA playoffs? Drawing from the idea that teams with good regular season records are more prepared for the challenges of the playoffs, I hypothesize that teams with better regular season offensive and defensive ratings will have more success in the playoffs (more success being defined as how far they advance in the playoffs). Behavioral and institutional explanations propose that teams excelling in the regular season have systems and strategies in place that translate to the more intense setting of the playoffs. Harnessing data from Basketball-Reference.com, spanning from the inception of the NBA playoffs in 1947 to the most recent full season, my analysis targets NBA teams with performance metrics who make the playoffs during a specific year (I won't be looking at data from let's say last year's Detroit Pistons since they did not make the playoffs). The explanatory variables are a team's "Offensive Rating" and "Defensive Rating" from the regular season, metrics representing points scored and conceded per 100 possessions, respectively. The outcome variable is the team's playoff performance which is measured in how far in the playoffs the team got (first round, second round, conference finals, and NBA finals). If teams with better regular season ratings consistently get further in the playoffs, this would prove my hypothesis. In contrast, a lack of a pattern or a negative relationship would reject the hypothesis. One problem I might run into is modeling this data since there are so few rounds and so many teams that I am looking at. Something that I could do is use an outcome variable of "net rating" in the playoffs which is simply the offensive rating - defensive rating. Something I want to try and consider is to also maybe see how offensive vs. defensive ratings matter in respect to each other. For example, is it better to have an okay offense and exceptional defense or vice versa. These are a couple directions I also thought about that I might consider doing either within the project or altering it slightly so it accounts/looks into this specifically. 
